packages/optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_segments.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 866
expression: output
---
==INPUT==


import { $, component$, server$ } from '@qwik.dev/core';
import { foo } from './foo';
export const Works = component$((props) => {
	const text = 'hola';
	return (
		<>
		<div onClick$={server$(() => console.log('in server', text))}></div>
		<div onClick$={() => foo()}></div>
		</>
	);
});

============================= test.js ==

import "./foo";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { _regSymbol } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
//
const q_Works_component_Fragment_div_q_e_click_server_YY85RDCwwvA = /*#__PURE__*/ _noopQrl("Works_component_Fragment_div_q_e_click_server_YY85RDCwwvA");
const q_Works_component_t45qL4vNGv0 = /*#__PURE__*/ _noopQrl("Works_component_t45qL4vNGv0");
const q_qrl_4294901763 = /*#__PURE__*/ _noopQrl("Works_component_Fragment_div_q_e_click_0UiSo8yqgZw");
//
q_Works_component_Fragment_div_q_e_click_server_YY85RDCwwvA.s(/*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "YY85RDCwwvA"));
q_Works_component_t45qL4vNGv0.s((props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": serverQrl(q_Works_component_Fragment_div_q_e_click_server_YY85RDCwwvA)
        }, null, null, 2, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            "q-e:click": q_qrl_4294901763
        }, null, 3, null)
    ], 1, "u6_0");
});
export const Works = /*#__PURE__*/ componentQrl(q_Works_component_t45qL4vNGv0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;uFAOyB,IAAM,QAAQ,GAAG,CAAC,aAH7B;gCADkB,CAAC;IAEhC,qBACC;sBACA,WAAC;YAAI,aAAU;;sBACf,WAAC;YAAI,WAAQ;;;AAGf;AARA,OAAO,MAAM,sBAAQ,4CAQlB\"}")
== DIAGNOSTICS ==

[]
